--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import "../node_modules/@syncfusion/ej2-base/styles/bootstrap5.css";
+@import "../node_modules/@syncfusion/ej2-buttons/styles/bootstrap5.css";
+
 .App {
   text-align: center;
 }
